@@ -1,3 +1,5 @@
+- NEW: new command line params for the log dialog to set the filter. (Stefan)
+
 Version 1.6.1
 - CHG: The history dialog is now 'attached' to the commit dialog. (Stefan)
 - CHG: When filling in a log message from the 'recent' messages in the
